--- a/phase_2/week_11/Lab/intro_to_tableau_II_notes.ipynb
+++ b/phase_2/week_11/Lab/intro_to_tableau_II_notes.ipynb
@@ -6,7 +6,15 @@
    "metadata": {},
    "source": [
     "## Data Storytelling\n",
-    "\n"
+    "\n",
+    "Sometimes we will present our findings using a combination of quantitative measures and qualitative descriptors to get our message across.\n",
+    " * We use a combination of data visualizations & descriptive notes to communicate our findings.\n",
+    "\n",
+    "Informally, we follow the workflow when starting to create a data story:\n",
+    "* Identify the story: what event or pattern are you interested in focusing on?\n",
+    "* Consider your audience: technical or non-technical?\n",
+    "* Focus on a subset of your data: Especially when communicating with a non-technical audience, we must limit our data.\n",
+    "* Identify effective visualizations: Given your findings, what graph would work best?"
    ]
   },
   {
