--- a/phase_2/week_11/Lab/intro_to_tableau_lab.ipynb
+++ b/phase_2/week_11/Lab/intro_to_tableau_lab.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "source": [
     "## Movie Dataset Exploration\n",
-    "\n"
+    "\n",
+    "Movies that we consider cult-classics today were perhaps before considered box-office-bombs when they first released.\n",
+    "\n",
+    "To gain better insight as to how often this happens, we will explore this dataset of 250 films. Specifically we will perform some visual `EDA` inside of Tableau."
    ]
   },
   {
@@ -15,7 +18,8 @@
    "metadata": {},
    "source": [
     "## Q1\n",
-    "\n"
+    "\n",
+    "Create a scatter plot of "
    ]
   },
   {
