--- a/phase_2/week_11/Lab/intro_to_tableau_lab.ipynb
+++ b/phase_2/week_11/Lab/intro_to_tableau_lab.ipynb
@@ -19,7 +19,9 @@
    "source": [
     "## Q1\n",
     "\n",
-    "Create a scatter plot of "
+    "Create a scatter plot of budget vs. box office and create a linear trend-line.\n",
+    "\n",
+    "What is the equation of this trend-line? Write down answer below."
    ]
   },
   {
@@ -33,7 +35,8 @@
    "metadata": {},
    "source": [
     "## Q2\n",
-    "\n"
+    "\n",
+    "What is the R2 of this trend-line. Is this positively or negatively correlated? Write down answer below."
    ]
   },
   {
@@ -47,7 +50,10 @@
    "metadata": {},
    "source": [
     "## Q3\n",
-    "\n"
+    "\n",
+    "Create a scatter plot of rank vs. box office and create a linear trend-line.\n",
+    "\n",
+    "What is the equation of this trend-line? Write down answer below."
    ]
   },
   {
@@ -61,13 +67,26 @@
    "metadata": {},
    "source": [
     "## Q4\n",
-    "\n"
+    "\n",
+    "What is the R2 of this trend-line. Is this positively or negatively correlated? Write down answer below."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q5\n",
+    "\n",
+    "Create a calculated field that checks if a movie made profit `(box_office - budget)`. Create a bar-chart of profit & movie name and sort by this calculated field.\n",
+    "\n",
+    "Which movie was the most profitable? Which was the least?"
+   ]
   }
  ],
  "metadata": {
