Added review assessment

--- a/phase_2/week_6/1_9/sql_intro_notes.ipynb
+++ b/phase_2/week_6/1_9/sql_intro_notes.ipynb
@@ -10443,10 +10443,10 @@
     "\n",
     "Properties of a DBMS\n",
     "\n",
-    "Allow users to Read/Write/Update using a query language\n",
-    "Allow multiple users to manipulate data without failure\n",
-    "Store massive amounts of data.\n",
-    "Backups"
+    "* Allow users to Read/Write/Update using a query language\n",
+    "* Allow multiple users to manipulate data without failure\n",
+    "* Store massive amounts of data.\n",
+    "* Backups"
    ]
   },
   {
@@ -10544,9 +10544,9 @@
     "Firstly, we will review how to create queries for data. Essentially, how to request data.\n",
     "The general format goes:\n",
     "\n",
-    "\t\t\t\tSELECT ... \n",
-    "                FROM ... \n",
-    "                WHERE …;\n",
+    "\t    SELECT ... \n",
+    "        FROM ... \n",
+    "        WHERE …;\n",
     "\n",
     "Let’s say we want to select the names of bakers that are younger than 40."
    ]
@@ -10631,7 +10631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
