--- a/phase_2/week_9/1_31/intermediate_sql_coding_exercise.ipynb
+++ b/phase_2/week_9/1_31/intermediate_sql_coding_exercise.ipynb
@@ -19,39 +19,17 @@
     "from sqlalchemy import create_engine, func\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "import pandas as pd\n",
     "\n",
-    "# postgresql+psycopg2://postgres:@localhost/epi\n",
-    "\n",
-    "# the `create_engine` function prepares a connection to the database\n",
-    "# should this info be public? \n",
     "engine = create_engine('postgresql+psycopg2://postgres:password@localhost:5434/epi')\n",
-    "\n",
-    "# this object will automatically map our db entity into a Python class\n",
     "Base = automap_base()\n",
-    "\n",
-    "# get db into automapper\n",
     "Base.prepare(engine, reflect=True)\n",
     "\n",
-    "# save classes as variables, prepare classes\n",
     "epi_country = Base.classes.epi_country\n",
-    "gdp = Base.classes.economic\n",
     "\n",
-    "# query our database (pull data and save into objects)\n",
     "session = Session(engine)\n",
     "\n",
-    "results_epi = session.query(epi_country.country, epi_country.air_h, epi_country.population07, epi_country.water_h, epi_country.biodiversity, epi_country.fisheries, epi_country.geo_subregion)\n",
-    "\n",
-    "gdp_country = session.query(gdp.country, gdp.subject, gdp.value)\n",
-    "\n",
-    "rows_epi = results_epi.all()\n",
-    "rows_gdp = gdp_country.all()\n",
-    "\n",
-    "gdp_df = pd.DataFrame(rows_gdp, columns=['country', 'subject', 'value'])\n",
-    "\n",
-    "epi_df = pd.DataFrame(rows_epi, columns=['country', 'air_h', 'population07', 'water_h', 'biodiversity', 'fisheries', 'geo_subregion'])\n",
-    "\n",
-    "engine.dispose()"
+    "country_epi_data = session.query(epi_country.code)\n",
+    "rows = country_epi_data.all()"
    ]
   },
   {
