--- a/review/tech_interviews/island.ipynb
+++ b/review/tech_interviews/island.ipynb
@@ -158,7 +158,7 @@
     "\n",
     "The following solution is a mix of pseudocode & Python code that can be used to solve the [Num of Islands](https://leetcode.com/problems/number-of-islands/) problem. Give this problem a shot, and try to fill in the remaining lines of pseudocode to create a functioning solution.\n",
     "\n",
-    "Keep in mind that this might not be the most efficient solution! Find ways to reduce bottle-neck (or unnecessary passing of variables) to speed your program up.\n",
+    "Keep in mind that this might not be the most efficient solution! Find ways to reduce bottle-neck (or unnecessary passing of variables) to speed your program up. Perhaps we could also remove the need for extraneous data-structures such as seen?\n",
     "\n",
     "And remember the journey is the goal in programming. Don't be driven by the need to complete, but rather the desire to discover how this computational way of thinking can help us solve *complex* problems. Always be sure to step away from code when it becomes too much, prioritize sleep, and let us know what you find fascinating in this field that we are fortunate enough to work in."
    ]
