--- a/phase_2/week_6/1_10/sql_coding_exercise.ipynb
+++ b/phase_2/week_6/1_10/sql_coding_exercise.ipynb
@@ -256,11 +256,6 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -355,7 +350,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
