--- a/phase_2/week_13/2_27/sql_review_assess.ipynb
+++ b/phase_2/week_13/2_27/sql_review_assess.ipynb
@@ -46,8 +46,8 @@
     "Write a query that returns all country names lowercased from the `orders` table.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [1/10 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_6/1_10/sql_intro_notes.ipynb)\n",
+    "* [1/9 Intro to SQL Lab](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_6/1_9/sql_coding_exercise.ipynb)"
    ]
   },
   {
@@ -71,8 +71,8 @@
     "Write a query that gets the name and type of coffee of all countries who have an order above 500 kgs but below 1000 kgs from the `orders` table.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [1/9 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_6/1_9/sql_intro_notes.ipynb)\n",
+    "* [1/9 Intro to SQL Lab](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_6/1_9/sql_coding_exercise.ipynb)"
    ]
   },
   {
@@ -96,8 +96,8 @@
     "Write a query that joins these two tables together on coffee-type, calculates the total price of an order according to price_kg, adds $1000 for air-freight, and then orders this table from most expensive order to least.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [1/17 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_7/1_17/sql_II_notes.ipynb)\n",
+    "* [1/17 Intro to SQL Lab](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_7/1_17/sql_II_coding_exercise.ipynb)"
    ]
   },
   {
@@ -121,8 +121,7 @@
     "Write a query that groups the orders table by country, and calculates the total kgs a country has ordered.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [1/17 Intro to SQL Lab](https://github.com/The-Knowledge-House/DS_22/blob/860bbefaf0a022b415857823a1e9e9cf034d01e5/phase_2/week_7/1_17/sql_II_coding_exercise.ipynb)"
    ]
   },
   {
@@ -146,8 +145,7 @@
     "Which data-type would work best for the `origin` column? Why?\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [Postgres Data-Types](https://www.postgresql.org/docs/current/datatype.html)"
    ]
   },
   {
@@ -165,8 +163,7 @@
     "Write an `ALTER` clause that will modify the `origin` clause to your selected data-type.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [1/17 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/860bbefaf0a022b415857823a1e9e9cf034d01e5/phase_2/week_7/1_17/sql_II_notes.ipynb)"
    ]
   },
   {
@@ -186,8 +183,7 @@
     "Write a query that groups the orders table by coffee-type, and calculates the total kgs of coffee-type ordered.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [1/17 Intro to SQL Lab](https://github.com/The-Knowledge-House/DS_22/blob/860bbefaf0a022b415857823a1e9e9cf034d01e5/phase_2/week_7/1_17/sql_II_coding_exercise.ipynb)"
    ]
   },
   {
@@ -211,8 +207,8 @@
     "Write a query that joins these two tables together by coffee-type, and reveal the origin & destination of this order.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [1/17 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_7/1_17/sql_II_notes.ipynb)\n",
+    "* [1/17 Intro to SQL Lab](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_7/1_17/sql_II_coding_exercise.ipynb)"
    ]
   },
   {
@@ -247,8 +243,7 @@
     "Try to make the best possible decision for each data-type, and decide what would be an ideal [primary key](https://www.tutorialspoint.com/sql/sql-primary-key.htm).\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [1/9 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_6/1_9/sql_intro_notes.ipynb)"
    ]
   },
   {
@@ -272,8 +267,8 @@
     "Create a join query to join all 3 tables (`companies`, `warehouse`, `orders`) in order to create a table that describes all orders, along with warehouse & company information.'\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [1/17 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_7/1_17/sql_II_notes.ipynb)\n",
+    "* [1/17 Intro to SQL Lab](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_7/1_17/sql_II_coding_exercise.ipynb)"
    ]
   },
   {
@@ -309,8 +304,7 @@
     "Import all 3 of your tables using sqlalchemy, and convert them into Python objects using the `auto_mapper`. \n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [2/1 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_9/Lab/intermediate_sql_lab_notes.ipynb)"
    ]
   },
   {
@@ -330,8 +324,7 @@
     "Create session and use these 3 python to save data into 3 seperate dataframes.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [2/1 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_9/Lab/intermediate_sql_lab_notes.ipynb)"
    ]
   },
   {
@@ -351,8 +344,8 @@
     "Write pandas code to discover which company name appears the most often in your jobs dataframe.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [2/1 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_9/Lab/intermediate_sql_lab_notes.ipynb)\n",
+    "* [1/9 Intro to SQL Lab](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_6/1_9/sql_intro_notes.ipynb)"
    ]
   },
   {
@@ -372,8 +365,8 @@
     "Write pandas code to discover the median salary of the `salary_standardized` column of your salary dataframe.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [2/1 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_9/Lab/intermediate_sql_lab_notes.ipynb)\n",
+    "* [1/9 Intro to SQL Lab](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_6/1_9/sql_intro_notes.ipynb)"
    ]
   },
   {
@@ -401,8 +394,9 @@
     "Write out a piece of code that you believe will allow you to accomplish this.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [2/1 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_9/Lab/intermediate_sql_lab_notes.ipynb)\n",
+    "* [1/9 Intro to SQL Lab](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_6/1_9/sql_intro_notes.ipynb)\n",
+    "* [SqlAlchemy Docs](https://docs.sqlalchemy.org/en/20/)"
    ]
   },
   {
@@ -455,8 +449,7 @@
     "\n",
     "Write a query that utilizes a `set` operation to get all id's (`id`) that only appear in both tables.\n",
     "\n",
-    "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
+    "**Relevant Notes/Labs**s\n",
     "* [Intro to SQL II 1/10 Slides](https://docs.google.com/presentation/d/1HORkuuOqz2jpurRW5CVp2ASoXE_2YyUDHCo_bEknneU/edit?usp=sharing)"
    ]
   },
@@ -481,7 +474,6 @@
     "Write a query that utilizes a `set` operation to get all id's (`id`) that only appear in the `B` table.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
     "* [Intro to SQL Lab](https://docs.google.com/presentation/d/1HORkuuOqz2jpurRW5CVp2ASoXE_2YyUDHCo_bEknneU/edit?usp=sharing)"
    ]
   },
@@ -508,8 +500,7 @@
     "Write out a query which will hook up this function to a trigger for the `A` table.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intermediate SQL I Slides](https://docs.google.com/presentation/d/1hBV5gxKHDoUDduRFgvSHRBpcrhMEDIN0Z178ZU6FtCw/edit?usp=sharing)\n",
-    "* [Intro to SQL Lab]()"
+    "* [Intermediate SQL I Slides](https://docs.google.com/presentation/d/1hBV5gxKHDoUDduRFgvSHRBpcrhMEDIN0Z178ZU6FtCw/edit?usp=sharing)"
    ]
   },
   {
@@ -533,8 +524,7 @@
     "What is the relationship between table `A` and table `B` regarding the primary-key `id` in `A` and the foreign key `id` in `B`.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "* [1/24 Intermediate SQL Notes](https://docs.google.com/presentation/d/11rmg6RQ6R9veGuFUWvWZZ339bVTVi61A-3K44KGrV9A/edit?usp=sharing)"
    ]
   },
   {
@@ -558,8 +548,7 @@
     "What is the most in-demand skill for data analysts in 2023. \n",
     "\n",
     "**Relevant Notes/Labs**\n",
-    "* [Intro to SQL Notes]()\n",
-    "* [Intro to SQL Lab]()"
+    "..."
    ]
   },
   {
@@ -571,7 +560,7 @@
     "print(\"Python\")\n",
     "print(\"SQL\")\n",
     "print(\"Tableau\")\n",
-    "print(\"\")"
+    "print(\"The ability to interpet morse code from vibrations in the air\")"
    ]
   }
  ],
