--- a/phase_2/week_13/2_27/sql_review_assess.ipynb
+++ b/phase_2/week_13/2_27/sql_review_assess.ipynb
@@ -321,7 +321,7 @@
    "source": [
     "## Q12\n",
     "\n",
-    "Create session and use these 3 python to save data into 3 seperate dataframes.\n",
+    "Create session and use these 3 python classes to save data into 3 seperate dataframes.\n",
     "\n",
     "**Relevant Notes/Labs**\n",
     "* [2/1 Intro to SQL Notes](https://github.com/The-Knowledge-House/DS_22/blob/main/phase_2/week_9/Lab/intermediate_sql_lab_notes.ipynb)"
@@ -529,13 +529,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One to One\n",
+      "One to Many\n",
+      "Many to Many\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"One to One\")\n",
-    "print(\"One to Many\")\n",
-    "print(\"Many to Many\")"
+    "#print(\"One to One\")\n",
+    "#print(\"One to Many\")\n",
+    "#print(\"Many to Many\")"
    ]
   },
   {
@@ -553,9 +563,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n",
+      "SQL\n",
+      "Tableau\n",
+      "The ability to interpet morse code from vibrations in the air\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Python\")\n",
     "print(\"SQL\")\n",
@@ -571,7 +592,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4,
