--- a/phase_2/week_14/Assessment/end_of_phase1_assessment.ipynb
+++ b/phase_2/week_14/Assessment/end_of_phase1_assessment.ipynb
@@ -63,7 +63,7 @@
     "## Q2 sqlalchemy\n",
     "\n",
     "Use sqlalchemy to implement each subsequent line. The `EPI` database is located in the `amazon` server at:\n",
-    "`postgresql+psycopg2://postgres:ds2022_aws@rds-pg-jobs.chfavwsr5bmp.us-east-1.rds.amazonaws.com:5432/epi` (same server as your job database).\n"
+    "`postgresql+psycopg2://postgres:...@rds-pg-jobs.chfavwsr5bmp.us-east-1.rds.amazonaws.com:5432/epi` (same server as your job database).\n"
    ]
   },
   {
