Changed the CLT question

--- a/phase_2/week_14/Assessment/end_of_phase2_assessment.ipynb
+++ b/phase_2/week_14/Assessment/end_of_phase2_assessment.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "# print out general information on your dataframe and its columns\n",
     "\n",
     "\n",
-    "# print out summary statistics for only the \"Gender Development Index value\" column"
+    "# print out summary statistics for only the \"Gender Development Index value\" column\n"
    ]
   },
   {
@@ -76,14 +76,16 @@
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
     "\n",
-    "# save your `EPI` table as a pandas dataframe using your `session`, `automapper`, and `engine` objects\n",
-    "# name it `epi`\n",
+    "# use your `session`, `automapper`, and `engine` objects to pull only the `country` & `epi` attributes from your\n",
+    "# `epi` table & save it to a pandas dataframe\n",
+    "# name it `epi_df`\n",
     "\n",
     "\n",
     "# print out the first 5 rows of this dataframe\n",
     "\n",
     "\n",
     "# print out the dimensions of your datarame (row, column)\n",
+    "# we should see 231 rows & 2 columns\n",
     "\n",
     "\n",
     "# print out general information on your dataframe and its columns\n",
@@ -127,11 +129,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# join your `hdi` dataframe and your `epi` dataframe into one dataframe on the \"Country\" column\n",
-    "# name this joined_df\n",
+    "# join your `hdi` dataframe and your `epi` dataframe into one dataframe on the \"country\" column\n",
+    "# name this dataframe \"joined_df\"\n",
     "\n",
     "\n",
-    "# select only the \"EPI\" & \"Gender Development Index value\" columns from your joined dataframe and save this into a \n",
+    "# select only the \"Country\", \"EPI\" & \"Gender Development Index value\" columns from your joined dataframe and save this into a \n",
     "# new dataframe called \"gend_dev\"\n",
     "\n",
     "\n",
@@ -145,7 +147,7 @@
    "source": [
     "## Q4 pandas Indexing\n",
     "\n",
-    "Use pandas to implement each subsequent line that details a mix of numeric indexing, boolean indexing, & grouping. Use the `data/HDI.csv` dataframe generated from Q1 (`hdi`)."
+    "Use pandas to implement each subsequent line that details a mix of numeric indexing, boolean indexing, & grouping. Use the joined dataframe generated from `Q3` labeled \"joined_df\"."
    ]
   },
   {
@@ -183,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create two new dataframes from your joined dataframe from `Q3`:\n",
+    "# create two new dataframes from your \"gend_dev\" from `Q3`:\n",
     "# one dataframe where the `Gender Development Index value` is less than or equal to 0.95\n",
     "# call this dataframe `low_gend`\n",
     "\n",
@@ -276,9 +278,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q9 T-Test Averages\n",
+    "## Q9 Central Limit Theorem\n",
     "\n",
-    "Run a two-sample t-test on the `EPI` column of both `low_gend` and `high_gend` in the following cell-block. Write down your observations in the markdown cell below the coding cell."
+    "Which statement best describes the central limit theorem? Comment out the print statement that contains the correct answer."
    ]
   },
   {
@@ -286,16 +288,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Do we reject the null hypothesis that there is no affect from Gender Development on EPI? Why or why not? \n",
-    "\n",
-    "Answer here"
+    "# print(\"the sampling distribution of the sample mean is approximately normal under certain conditions.\")\n",
+    "# print(\"as a sample size grows, its mean gets closer to the average of the whole population\")\n",
+    "# print(\"the average of a data set\")\n",
+    "# print(\"the most frequent number of a data set\")"
    ]
   },
   {
@@ -337,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
