--- a/phase_2/week_9/1_31/intermediate_sql_coding_exercise.ipynb
+++ b/phase_2/week_9/1_31/intermediate_sql_coding_exercise.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,15 +20,22 @@
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
     "\n",
+    "# create an engine, which is our connection to the database located at our URL\n",
+    "#\n",
     "engine = create_engine('postgresql+psycopg2://postgres:password@localhost:5434/epi')\n",
+    "# create an automapper - this automatically transforms tables into objects\n",
     "Base = automap_base()\n",
+    "# connect your engine to your automapper\n",
     "Base.prepare(engine, reflect=True)\n",
     "\n",
+    "# pull out the epi_country as an object from your db\n",
     "epi_country = Base.classes.epi_country\n",
     "\n",
+    "# create temporary connection to database\n",
     "session = Session(engine)\n",
     "\n",
-    "country_epi_data = session.query(epi_country.code)\n",
+    "# get all\n",
+    "country_epi_data = session.query(epi_country)\n",
     "rows = country_epi_data.all()"
    ]
   },
