--- a/phase_2/week_14/Assessment/end_of_phase2_assessment.ipynb
+++ b/phase_2/week_14/Assessment/end_of_phase2_assessment.ipynb
@@ -316,6 +316,20 @@
     "\n",
     "# output the R2 value of this model\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q10 P-values\n",
+    "\n",
+    "Assume that we do a hypothesis-test for differences in mean EPI scores for our `low_gend` and `high_gend` dataframes. Our null hypothesis states that there is no difference in `EPI` outcomes between groups of countries that have high gender equality scores and low gender equality scores.\n",
+    "\n",
+    "We get a p-value of `0.34`. Do we reject the null hypothesis? Why or why not?\n",
+    "\n",
+    "Answer here."
+   ]
   }
  ],
  "metadata": {
