Added phase_3 material

--- a/phase_3/week_1/3_21/basic_stats_review.ipynb
+++ b/phase_3/week_1/3_21/basic_stats_review.ipynb
@@ -5,7 +5,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Statistics"
+    "## Review Material\n",
+    "\n",
+    "\n",
+    "* [Bayes Theorem Video](https://www.youtube.com/watch?v=R13BD8qKeTg)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Statistics\n",
+    "\n",
+    "Why do we need statistics? \n",
+    "* Anyone can make a machine learning model, not everyone can talk about results competently \n",
+    "* The only way we’re making inferences & predictions on this data is through statistics\n",
+    "* We are data SCIENTISTS. Not only must we be proficient in tech & software skills, but we must also know how to analyze experiments\n",
+    "\n",
+    "**Parametric Method**\n",
+    "We assume some sort of form to our distribution, i.e. normal distribution\n",
+    "\n",
+    "* Parametric does not always assume normal!\n",
+    "* Most methods that we have at our disposal assume normal, so we default to this distribution\n",
+    "* We usually apply these methods on large datasets.\n",
+    "* We only apply these methods to continuous variables (numbers)\n",
+    "* This assumption of distribution lends to its statistical power\n",
+    "\n",
+    "**Non-Parametric Methods**\n",
+    "We cannot assume any form to our distribution (distribution-free)\n",
+    "\n",
+    "* We usually have a small sample size \n",
+    "* Since we cannot assume distribution, we have less statistical power\n",
+    "* Variables could be discrete (labels) or continuous (numbers)\n"
    ]
   },
   {
